kse model parser in progress 2